# llm-autobatch

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: bench_throughput.py
docs/: RELEASE_CHECKLIST.md  ROADMAP.md
examples/: fastapi_demo.py  torch_demo.py
rust/: Cargo.toml
rust/src/: core.rs  lib.rs  metrics.rs  queue.rs
src/llm_autobatch/: __init__.py  _native.pyi  batcher.py  decorators.py
src/llm_autobatch/http/: __init__.py  openai_responses.py
src/llm_autobatch/torch/: __init__.py  executor.py
tests/: test_backpressure.py  test_basic_batching.py  test_http_executor.py  test_torch_executor.py
