[package]
name = "llm_autobatch_core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "llm_autobatch_core"
crate-type = ["cdylib"]

[dependencies]
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }

[features]
# Enables Python extension module support via maturin
extension-module = ["pyo3/extension-module"]
